[gd_scene load_steps=55 format=2]

[ext_resource path="res://images/spritesheets/Boss2/_Idle.png" type="Texture" id=1]
[ext_resource path="res://images/spritesheets/Boss2/_Attack.png" type="Texture" id=2]
[ext_resource path="res://shaders/Flash.tres" type="Material" id=3]
[ext_resource path="res://images/spritesheets/Boss2/_Jump.png" type="Texture" id=4]
[ext_resource path="res://images/spritesheets/Boss2/_Hit.png" type="Texture" id=5]
[ext_resource path="res://images/spritesheets/Boss2/_Fall.png" type="Texture" id=6]
[ext_resource path="res://images/spritesheets/Boss2/_Death.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemies/Boss2.gd" type="Script" id=8]
[ext_resource path="res://images/spritesheets/Boss2/_Run.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ) ],
"loop": false,
"name": "Hit",
"speed": 2.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 48 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 31.5503
height = 51.9414

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 89.1882, 59.5848 )

[sub_resource type="CapsuleShape2D" id=60]
radius = 35.8768
height = 45.9082

[node name="Boss2" type="KinematicBody2D"]
material = ExtResource( 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 8 )
SPEED = 200
HEALTH = 15
JUMPFORCE = 512
GRAVITY = 16

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( 3, 3 )
frames = SubResource( 16 )
animation = "Idle"
frame = 1
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="hitboxleft" type="CollisionShape2D" parent="."]
position = Vector2( -15.8872, 61.9683 )
shape = SubResource( 17 )
disabled = true

[node name="hitboxright" type="CollisionShape2D" parent="."]
position = Vector2( 13.2613, 62.81 )
shape = SubResource( 17 )

[node name="AttackCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="area" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -90.2424, 62.226 )
shape = SubResource( 49 )
disabled = true

[node name="Attack_timer" type="Timer" parent="AttackCollision/area"]
wait_time = 0.4
one_shot = true

[node name="body" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 13.3635, 61.472 )
shape = SubResource( 60 )

[node name="Cooldown" type="Timer" parent="AttackCollision/body"]
one_shot = true

[node name="Attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Turn_cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RayWall" type="RayCast2D" parent="."]
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( -150, 0 )
collide_with_areas = true

[node name="RayChar" type="RayCast2D" parent="."]
position = Vector2( 0, 55 )
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 2

[node name="RayBehind" type="RayCast2D" parent="."]
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 2

[node name="RayAbove" type="RayCast2D" parent="."]
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( 0, -250 )
collision_mask = 2

[node name="Effect_dmg" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AttackCollision" to="." method="_on_AttackCollision_body_entered"]
[connection signal="timeout" from="AttackCollision/area/Attack_timer" to="." method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="AttackCollision/body/Cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_Attack_cooldown_timeout"]
[connection signal="timeout" from="Turn_cooldown" to="." method="_on_Turn_cooldown_timeout"]
